--- a/index.html
+++ b/index.html
@@ -7,11 +7,122 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet"
         />
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
-    <body></body>
+    <body style="height: 5000px">
+        <!-- Header -->
+        <header class="header fixed">
+            <div class="container">
+                <div class="body">
+                    <a href="#!">
+                        <img
+                            src="./assets/img/logo.png"
+                            alt="Besnik"
+                            class="logo"
+                        />
+                    </a>
+                    <nav class="nav">
+                        <ul>
+                            <li>
+                                <a href="#!" class="active">Home</a>
+                            </li>
+                            <li>
+                                <a href="#!">Features</a>
+                            </li>
+                            <li>
+                                <a href="#!">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">About</a>
+                            </li>
+                            <li>
+                                <a href="#!">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="action">
+                        <a href="#!" class="action_link">Sign in</a>
+                        <a href="#!" class="btn-signUp">Sign up</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- Hero -->
+        <div class="hero">
+            <div class="container">
+                <div class="body">
+                    <div class="info">
+                        <span class="text">😎 EASY LEAENING PLATFORM</span>
+                        <h1 class="heading">Words learner come here.</h1>
+                        <p class="desc">
+                            Build skills with courses, certificates, and get
+                            online knowledge from our world-class platform.
+                        </p>
+                        <div class="cta-group">
+                            <a href="#!" class="btn">Get Started</a>
+                            <div class="hero-icons-cta">
+                                <img
+                                    src="./assets/icons/play-icon.svg"
+                                    alt=""
+                                />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="block-image">
+                        <img
+                            src="./assets/img/hero.jpg"
+                            class="img-hero"
+                            alt=""
+                        />
+                        <div class="hero-courses">
+                            <span class="courses-icon"></span>
+                            <span class="courses-text">Courses 1000+</span>
+                        </div>
+                        <div class="hero-schedules">
+                            <span class="schedules-text">Schedules</span>
+                            <div class="progress"><span></span></div>
+                            <div class="progress"><span></span></div>
+                            <div class="progress"><span></span></div>
+                            <div class="progress"></div>
+                        </div>
+                        <div class="hero-avatar">
+                            <span class="hero-text">Our Active Students</span>
+                            <div class="avatar-group">
+                                <img
+                                    src="./assets/img/avatar-1.jpg"
+                                    alt=""
+                                    class="avatar-img"
+                                />
+                                <img
+                                    src="./assets/img/avatar-1.jpg"
+                                    alt=""
+                                    class="avatar-img"
+                                />
+                                <img
+                                    src="./assets/img/avatar-1.jpg"
+                                    alt=""
+                                    class="avatar-img"
+                                />
+                                <img
+                                    src="./assets/img/avatar-1.jpg"
+                                    alt=""
+                                    class="avatar-img"
+                                />
+                                <img
+                                    src="./assets/img/avatar-1.jpg"
+                                    alt=""
+                                    class="avatar-img"
+                                />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
