--- a/index.html
+++ b/index.html
@@ -124,5 +124,73 @@
                 </div>
             </div>
         </div>
+
+        <!-- FEATURES -->
+        <div class="features">
+            <div class="container">
+                <div class="features-info">
+                    <span class="text">F E A T U R E S</span>
+                    <h2 class="heading">
+                        We are providing suitable features for students.
+                    </h2>
+                    <p class="desc">
+                        Read our awesome feature that is absolutely suit for
+                        you. Explore the feature and know the best.
+                    </p>
+                </div>
+                <div class="list-features">
+                    <div class="item-feature">
+                        <div class="feature-icon">
+                            <img
+                                src="./assets/icons/Monitor.svg"
+                                alt=""
+                                class="img-feature-thumb"
+                            />
+                        </div>
+                        <div class="item-info">
+                            <h3 class="title">Live Class</h3>
+                            <p class="desc">
+                                We are providing live classes with the best
+                                teacher for you
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="item-feature">
+                        <div class="feature-icon">
+                            <img
+                                src="./assets/icons/Chating-circle.svg"
+                                alt=""
+                                class="img-feature-thumb"
+                            />
+                        </div>
+                        <div class="item-info">
+                            <h3 class="title">Discuss</h3>
+                            <p class="desc">
+                                Conversation with teachers or another students
+                                about task or any other thing
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="item-feature">
+                        <div class="feature-icon">
+                            <img
+                                src="./assets/icons/Rectangle57.svg"
+                                alt=""
+                                class="img-feature-thumb"
+                            />
+                        </div>
+                        <div class="item-info">
+                            <h3 class="title">Task</h3>
+                            <p class="desc">
+                                We give every of our students task for gathering
+                                knowledge at home
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
