--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                             alt=""
                         />
                         <div class="hero-courses">
-                            <span class="courses-icon"></span>
-                            <span class="courses-text">Courses 1000+</span>
+                            <span class="hero-courses-icon"></span>
+                            <span class="hero-courses-text">Courses 1000+</span>
                         </div>
                         <div class="hero-schedules">
                             <span class="schedules-text">Schedules</span>
@@ -187,6 +187,79 @@
                                 We give every of our students task for gathering
                                 knowledge at home
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- COURSES -->
+        <div class="courses">
+            <div class="container">
+                <div class="courses-info">
+                    <span class="text">C O U R S E S</span>
+                    <h2 class="heading">Popular Courses</h2>
+                    <div class="row">
+                        <p class="desc">
+                            Check out our most poular courses that suit for you.
+                            Here you can find your favourite one.
+                        </p>
+                        <a href="#!" class="btn-course">View All Courses</a>
+                    </div>
+                </div>
+                <div class="list-courses">
+                    <div class="item-courses">
+                        <img
+                            src="./assets/img/course-1.jpg"
+                            alt="Web Design"
+                            class="img-course-thumb"
+                        />
+                        <div class="item-course-body">
+                            <h3 class="title">Web Design</h3>
+                            <p class="price">Fee <strong>$200</strong></p>
+                            <p class="desc">Web design basic to higer level</p>
+                            <div class="item-info">
+                                <span class="info">40 Classes</span>
+                                <span class="info">3 Months</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item-courses">
+                        <img
+                            src="./assets/img/course-2.jpg"
+                            alt="Web Development"
+                            class="img-course-thumb"
+                        />
+                        <div class="item-course-body">
+                            <h3 class="title">Web Development</h3>
+                            <p class="price">Fee <strong>$250</strong></p>
+                            <p class="desc">
+                                Web development basic to higer level
+                            </p>
+                            <div class="item-info">
+                                <span class="info">30 Classes</span>
+                                <span class="info">3 Months</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item-courses">
+                        <img
+                            src="./assets/img/course-3.jpg"
+                            alt="UI/UX Design"
+                            class="img-course-thumb"
+                        />
+                        <div class="item-course-body">
+                            <h3 class="title">UI/UX Design</h3>
+                            <p class="price">Fee <strong>$350</strong></p>
+                            <p class="desc">
+                                UI/UX design basic to higer level
+                            </p>
+                            <div class="item-info">
+                                <span class="info">50 Classes</span>
+                                <span class="info">4 Months</span>
+                            </div>
                         </div>
                     </div>
                 </div>
