stats and feedback

--- a/index.html
+++ b/index.html
@@ -94,27 +94,27 @@
                             <span class="hero-text">Our Active Students</span>
                             <div class="avatar-group">
                                 <img
-                                    src="./assets/img/avatar-1.jpg"
+                                    src="./assets/img/avatar-1.png"
                                     alt=""
                                     class="avatar-img"
                                 />
                                 <img
-                                    src="./assets/img/avatar-1.jpg"
+                                    src="./assets/img/avatar-1.png"
                                     alt=""
                                     class="avatar-img"
                                 />
                                 <img
-                                    src="./assets/img/avatar-1.jpg"
+                                    src="./assets/img/avatar-1.png"
                                     alt=""
                                     class="avatar-img"
                                 />
                                 <img
-                                    src="./assets/img/avatar-1.jpg"
+                                    src="./assets/img/avatar-1.png"
                                     alt=""
                                     class="avatar-img"
                                 />
                                 <img
-                                    src="./assets/img/avatar-1.jpg"
+                                    src="./assets/img/avatar-1.png"
                                     alt=""
                                     class="avatar-img"
                                 />
@@ -261,6 +261,68 @@
                                 <span class="info">4 Months</span>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- STATS -->
+        <div class="stats">
+            <div class="container">
+                <div class="body">
+                    <div class="item-stat">
+                        <strong class="strong">100+</strong>
+                        <p class="desc">Popular Courses</p>
+                    </div>
+                    <div class="item-stat">
+                        <strong class="strong">500+</strong>
+                        <p class="desc">Skilled Trainer</p>
+                    </div>
+                    <div class="item-stat">
+                        <strong class="strong">1M+</strong>
+                        <p class="desc">Student Learning</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- FEEDBACK -->
+        <div class="feedback">
+            <div class="container">
+                <div class="body">
+                    <div class="content">
+                        <img
+                            src="./assets/icons/quote-left.svg"
+                            alt=""
+                            class="open-quotes"
+                        />
+                        <blockquote>
+                            “They are the best people. And this is the suitable
+                            platform to learn from distance.”
+                        </blockquote>
+                        <p class="desc"><strong>Ben Foakes,</strong>student.</p>
+                        <div class="controls">
+                            <button class="control-btn">
+                                <img
+                                    src="./assets/icons/chevron-left.svg"
+                                    alt=""
+                                />
+                            </button>
+                            <button class="control-btn">
+                                <img
+                                    src="./assets/icons/chevron-right.svg"
+                                    alt=""
+                                />
+                            </button>
+                        </div>
+                    </div>
+                    <div class="feedback-images">
+                        <img src="./assets/img/avatar-1.png" alt="" />
+                        <img src="./assets/img/avatar-2.png" alt="" />
+                        <img src="./assets/img/avatar-3.png" alt="" />
+                        <img src="./assets/img/avatar-4.png" alt="" />
+                        <img src="./assets/img/avatar-5.png" alt="" />
+                        <img src="./assets/img/avatar-6.png" alt="" />
                     </div>
                 </div>
             </div>
