--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
-    <body style="height: 5000px">
+    <body>
         <!-- Header -->
         <header class="header fixed">
             <div class="container">
@@ -327,5 +327,117 @@
                 </div>
             </div>
         </div>
+
+        <!-- CTA -->
+        <div class="cta-admit">
+            <div class="container">
+                <div class="row">
+                    <div class="cta-text">
+                        <h2 class="heading">Ready to Get Admit</h2>
+                        <p class="desc">
+                            Create your account and Boost your Career.
+                        </p>
+                    </div>
+                    <a href="#!" class="button-cta">Get Started</a>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="body">
+                    <a href="#!">
+                        <img
+                            src="./assets/img/logo.png"
+                            alt="Besnik"
+                            class="logo"
+                        />
+                    </a>
+                    <div class="item-footer">
+                        <h4 class="title">Company</h4>
+                        <ul class="list-footer">
+                            <li>
+                                <a href="">About</a>
+                            </li>
+                            <li>
+                                <a href="">Careers</a>
+                            </li>
+                            <li>
+                                <a href="">Press</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="item-footer">
+                        <h4 class="title">Community</h4>
+                        <ul class="list-footer">
+                            <li>
+                                <a href="">Team Plans</a>
+                            </li>
+                            <li>
+                                <a href="">Blog</a>
+                            </li>
+                            <li>
+                                <a href="">Students</a>
+                            </li>
+                            <li>
+                                <a href="">Schoolarships</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="item-footer">
+                        <h4 class="title">Teaching</h4>
+                        <ul class="list-footer">
+                            <li>
+                                <a href="">Become a teacher</a>
+                            </li>
+                            <li>
+                                <a href="">Teaching academy</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="item-footer">
+                        <h4 class="title">Be social</h4>
+                        <ul class="list-footer">
+                            <li>
+                                <img
+                                    src="./assets/icons/twitter.svg"
+                                    alt="Twitter"
+                                />
+                                <a href="">Twitter</a>
+                            </li>
+                            <li>
+                                <img
+                                    src="./assets/icons/f.svg"
+                                    alt="Facebook"
+                                />
+                                <a href="">Facebook</a>
+                            </li>
+                            <li>
+                                <img
+                                    src="./assets/icons/instagram.svg"
+                                    alt="Instagram"
+                                />
+                                <a href="">Instagram</a>
+                            </li>
+                            <li>
+                                <img
+                                    src="./assets/icons/linked_in.svg"
+                                    alt="Linkedin"
+                                />
+                                <a href="">Linkedin</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <p class="desc">
+                        © Copyright 2020 by Mayad Ahmed. All right reserved.
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
